--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,6 @@
 body {
 	margin: 0;
-	background-color: #000;
+	background-color: #fff;
 	color: #fff;
 	font-family: Monospace;
 	font-size: 13px;
@@ -81,4 +81,201 @@ a, button, input, select {
 	background-color: #f00;
 	margin-top: 20px;
 	padding: 10px;
+}
+
+@font-face {
+	font-family: "Helvetica Neue";
+	src: url("assets/fonts/HelveticaNeue-Light.woff");
+}
+
+@font-face {
+	font-family: "Helvetica Neue Bold";
+	src: url("assets/fonts/HelveticaNeue-Bold.woff");
+}
+
+body {
+	font-family: "Helvetica Neue";
+}
+
+#blocker {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(255, 255, 255, 1);
+	color: rgb(29, 29, 27);
+	z-index: 10;
+	transition: background-color 1s ease-in-out;
+	-moz-transition: background-color 1s ease-in-out;
+	-webkit-transition: background-color 1s ease-in-out;
+}
+
+#instructions {
+	text-align: center;
+	font-size: 14px;
+	line-height: 24px;
+	opacity: 1;
+	display: none;
+}
+
+#name-screen {
+	text-align: center;
+	font-size: 14px;
+	line-height: 24px;
+	opacity: 1;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	color:rgb(255, 255, 255);
+
+	display: none;
+}
+
+#name-input {
+	display: block;
+	width: 100%;
+	height: 28px;
+	padding: 8px 12px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
+	border-style: none;
+	border-width: 1px;
+	border-color: #9b9b9b;
+	border-radius: 15px;
+	color: #3d3d39;
+	opacity: 0.5;
+	text-align: center;
+}
+
+input:focus { outline: none; }
+
+.debug {
+	display: block;
+}
+
+#loading-screen {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 10;
+}
+
+.loading-bar{
+	width: 200px;
+	height: 10px;
+	background: rgb(181, 181, 175);
+	border-radius: 5px;
+}
+
+#loading-bulb {
+	width: 96px;
+	height: 96px;
+	margin-bottom: 32px;
+	filter: invert(1)
+}
+
+#progress-bar{
+	width: 0%;
+	height: 100%;
+	background: rgb(29, 29, 27);
+	border-radius: 5px;
+	border: 0;
+}
+
+#modal-container {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 100;
+	display: none;
+}
+
+#modal {
+	width: 300px;
+	border-radius: 10px;
+	background-color: rgb(255, 255, 255);
+	color:rgb(29, 29, 27);
+
+	/* position: fixed;
+	left: 400px;
+	top: 600px; */
+	z-index: 20;
+	/* box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); */
+
+}
+
+#modal-image {
+	width: 100%;
+	height: 200px;
+	border-radius: 10px 10px 0 0;
+	background-image: url("https://res.cloudinary.com/desummershow/image/fetch/f_auto,q_75,w_1080/https://deshowcase.london/static/Thumbnail-noom-sirada.jpg");
+    background-position: 50% 50%;
+    background-size: cover;
+}
+
+#modal-body {
+	margin: 0;
+	padding: 15px;
+	font-family: "Helvetica Neue";
+	/* display: flex;
+	flex-direction: column; */
+}
+
+#modal-title {
+	font-family: "Helvetica Neue Bold";
+	font-size: 24px;
+	margin: 0;
+}
+
+#modal-author {
+	font-size: 16px;
+	color: rgb(99, 99, 94);
+	margin: 0;
+	margin-bottom: 10px;
+}
+
+#modal-desc p {
+	font-size: 14px;
+	margin: 0;
+}
+
+#modal-link {
+	margin: 0 auto;
+}
+
+#modal-button {
+	margin: 0;
+	height: 30px;
+	border-radius: 15px;
+	font-size: 14px;
+	color:rgb(255, 255, 255);
+	background-color: rgb(29, 29, 27);
+	border: 0;
+}
+
+#modal-button-text {
+	text-transform: none;
+	padding: 5px;
+	font-family: "Helvetica Neue";
+}
+
+#modal-button:hover {
+	font-size: 14px;
+	background-color:rgb(232, 232, 232);
+	color: rgb(29, 29, 27);
 }
