--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Helvetica Neue';
-  font-weight: 400;
+  font-weight: 300;
   src: url('assets/fonts/HelveticaNeue-Light.woff');
 }
 
@@ -14,8 +14,8 @@ body {
   background-color: #fff;
   color: #fff;
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  font-family: monospace;
   font-size: 13px;
+  font-weight: 300;
   line-height: 24px;
   margin: 0;
   overscroll-behavior: none;
@@ -39,11 +39,17 @@ a:hover {
 
 button {
   cursor: pointer;
+  outline: none;
   text-transform: uppercase;
+  transition-duration: 0.2s;
+  transition-property: background-color, color;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
-input:focus {
-  outline: none;
+canvas {
+  transition-duration: 0.2s;
+  transition-property: filter;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 #info {
@@ -62,11 +68,13 @@ input:focus {
 }
 
 .debug {
-  display: block;
+  display: none;
 }
 
-#modal-container {
+#modal-screen {
   align-items: center;
+  background-color: rgba(255, 255, 255, 0);
+  color: rgb(29, 29, 27);
   display: flex;
   display: none;
   flex-direction: column;
@@ -74,30 +82,134 @@ input:focus {
   justify-content: center;
   position: absolute;
   width: 100%;
-  z-index: 100;
+  z-index: 500;
 }
 
 #modal {
-  background-color: rgb(255, 255, 255);
+  background: none;
   border-radius: 10px;
+  box-shadow: 0 4px 10px rgb(60 64 67 / 28%);
   color: rgb(29, 29, 27);
-  width: 300px;
-  z-index: 20;
+  position: absolute;
+  z-index: 120;
+}
+
+#modal-close {
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.75);
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0 4px 10px rgb(60 64 67 / 28%);
+  color: rgb(99, 99, 94);
+  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  height: 30px;
+  left: 400px;
+  position: absolute;
+  top: 0;
+  transform: translate(-15px, -15px);
+  width: 30px;
+  z-index: 120;
+}
+
+#modal-close:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+#modal-close:active {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+#modal-contents {
+  backdrop-filter: blur(15px);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-weight: 300;
+  max-height: 100px;
+  overflow: hidden;
+  transition-duration: 0.2s;
+  transition-property: max-height;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  width: 400px;
+}
+
+#modal-loading {
+  margin: 0;
+  padding: 15px;
+}
+
+#modal-loading div {
+  background-color: rgb(200, 200, 200);
+  border-radius: 6px;
+  height: 12px;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  overflow: hidden;
+  position: relative;
+}
+
+#modal-loading div::after {
+  -webkit-animation: ssc-loading 1.3s infinite;
+  animation: ssc-loading 1.3s infinite;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(transparent),
+    color-stop(rgba(255, 255, 255, 0.3)),
+    to(transparent)
+  );
+  background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+  content: '';
+  height: 100%;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  z-index: 1;
+}
+
+#modal-loading-short {
+  width: 80px;
+}
+
+#modal-loading-medium {
+  width: 120px;
+}
+
+#modal-loading-long {
+  width: 220px;
+}
+
+#modal-error {
+  font-size: 16px;
+  margin: 0;
+  padding: 15px;
+  text-align: center;
 }
 
 #modal-image {
   background-image: url('https://res.cloudinary.com/desummershow/image/fetch/f_auto,q_75,w_1080/https://deshowcase.london/static/Thumbnail-noom-sirada.jpg');
   background-position: 50% 50%;
   background-size: cover;
-  border-radius: 10px 10px 0 0;
-  height: 200px;
+  display: none;
+  height: 225px;
   width: 100%;
+
+  /* border-radius: 10px 10px 0 0; */
 }
 
 #modal-body {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  display: none;
   margin: 0;
   padding: 15px;
+
+  /* backdrop-filter: blur(15px);
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 0px 0px 10px 10px;
+  font-family: "Helvetica Neue"; */
 }
 
 #modal-title {
@@ -119,30 +231,39 @@ input:focus {
   margin: 0;
 }
 
+#modal-footer {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
 #modal-link {
   margin: 0 auto;
 }
 
 #modal-button {
-  background-color: rgb(29, 29, 27);
+  background-color: rgba(29, 29, 27, 0.5);
   border: 0;
-  border-radius: 15px;
+  border-radius: 100px;
   color: rgb(255, 255, 255);
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 14px;
-  height: 30px;
+  font-size: 0.9rem;
+  font-weight: 300;
+  line-height: 1.5;
   margin: 0;
+  padding: 0.375rem 0.75rem;
+  text-transform: none;
 }
 
 #modal-button:hover {
-  background-color: rgb(232, 232, 232);
+  background-color: rgba(232, 232, 232, 0.8);
   color: rgb(29, 29, 27);
-  font-size: 14px;
 }
 
-#modal-button-text {
-  font-family: 'Helvetica Neue', Helvetica, sans-serif;
-  padding: 5px;
-  text-transform: none;
+#modal-button:active {
+  background-color: rgba(245, 245, 245, 0.8);
+  color: rgb(29, 29, 27);
 }
 
 #blocker {
@@ -154,11 +275,12 @@ input:focus {
   height: 100%;
   justify-content: center;
   position: absolute;
-  -moz-transition: background-color 1s ease-in-out;
-  -webkit-transition: background-color 1s ease-in-out;
-  transition: background-color 1s ease-in-out;
   width: 100%;
-  z-index: 10;
+  z-index: 90;
+
+  /* transition-property: background-color;
+    transition-duration: 2s;
+    transition-timing-function: cubic-bezier(0.0,0.0,0.2,1); */
 }
 
 #loading-screen {
@@ -169,7 +291,7 @@ input:focus {
   justify-content: center;
   position: absolute;
   width: 100%;
-  z-index: 10;
+  z-index: 300;
 }
 
 #loading-bulb {
@@ -194,43 +316,142 @@ input:focus {
   width: 0%;
 }
 
-#instructions {
+#crosshair {
+  color: white;
+  display: none;
+  font-size: 20px;
+  position: absolute;
+  transition-duration: 0.2s;
+  transition-property: font-size;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  user-select: none;
+  z-index: 5;
+}
+
+#instructions-screen {
+  bottom: 100px;
   display: none;
   font-size: 14px;
   line-height: 24px;
-  opacity: 1;
+  opacity: 0;
+  position: absolute;
   text-align: center;
+  user-select: none;
+}
+
+#info-screen {
+  bottom: 100px;
+  display: none;
+  font-size: 14px;
+  line-height: 24px;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  user-select: none;
+}
+
+#escape-screen {
+  color: white;
+  display: none;
+  font-family: 'Helvetica Neue', Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  left: 25px;
+  position: absolute;
+  top: 25px;
+}
+
+#escape-screen span {
+  padding-top: 10px;
+}
+
+.escape {
+  border: 3px white solid;
+  border-radius: 6px;
+  height: 33px;
+  margin: 0 5px;
+  padding-top: 7px !important;
+  text-align: center;
+  width: 40px;
 }
 
 #name-screen {
   align-items: center;
-  color: rgb(255, 255, 255);
+  backdrop-filter: blur(15px);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgb(60 64 67 / 28%);
+  color: rgb(29, 29, 27);
   display: none;
   flex-direction: column;
   font-size: 14px;
   justify-content: center;
   line-height: 24px;
-  opacity: 1;
+  opacity: 0;
+  padding: 50px;
+  position: absolute;
   text-align: center;
+  user-select: none;
+  width: 300px;
+  z-index: 200;
+}
+
+#name-form {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
 }
 
 #name-input {
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-color: #9b9b9b;
-  border-radius: 15px;
-  border-style: none;
-  border-width: 1px;
+  background-color: rgba(220, 220, 220, 0.5);
+  border: 1px solid rgba(176, 176, 176, 0.5);
+  border-radius: 10px;
   color: #3d3d39;
   display: block;
+  flex-grow: 1;
   font-size: 14px;
   height: 28px;
   line-height: 1.42857143;
-  margin-bottom: 10px;
-  opacity: 0.5;
   padding: 8px 12px;
   text-align: center;
-  width: 100%;
+  transition-duration: 0.2s;
+  transition-property: background-color;
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+
+  /* width: 100%; */
+}
+
+#name-input:hover {
+  background-color: rgba(230, 230, 230, 0.5);
+}
+
+#name-input:focus {
+  background-color: rgba(240, 240, 240, 0.5);
+  outline: none;
+}
+
+#form-submit {
+  background-color: rgba(220, 220, 220, 0.5);
+  border: 1px solid rgba(176, 176, 176, 0.5);
+  border-radius: 10px;
+  border-width: 1px;
+  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-left: 10px;
+  width: 46px;
+}
+
+#form-submit:hover {
+  background-color: rgba(230, 230, 230, 0.5);
+  color: rgb(29, 29, 27);
+}
+#form-submit:active {
+  background-color: rgba(240, 240, 240, 0.5);
+  color: rgb(29, 29, 27);
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
 
 .dg.ac {
@@ -239,6 +460,17 @@ input:focus {
   -ms-user-select: none;
   user-select: none;
   z-index: 2 !important; /* TODO Solve this in HTML */
+}
+
+.error {
+  color: red;
+}
+
+.notransition {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
 }
 
 #overlay {
@@ -273,4 +505,25 @@ input:focus {
   margin-top: 20px;
   padding: 10px;
   width: 50%;
+}
+
+@-webkit-keyframes ssc-loading {
+  from {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  to {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+}
+@keyframes ssc-loading {
+  from {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+  }
+  to {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
 }
